fix(ui): overflow issue by navbar
- Remove fixed position from Navbar
- Revert changes in Carousel
- Remove mt-32 in Mainpage and EVDetails

--- a/FrontEnd/src/App.css
+++ b/FrontEnd/src/App.css
@@ -4,6 +4,9 @@
   padding: 2rem;
   text-align: center;
 }
+html, body, #root {
+  overflow-x: hidden;
+}
 
 .logo {
   height: 6em;
