--- a/FrontEnd/src/styles/HomePage.css
+++ b/FrontEnd/src/styles/HomePage.css
@@ -4,6 +4,9 @@
   max-width: 100vw;
   overflow-x: hidden;
 }
+html, body, #root {
+  overflow-x: hidden;
+}
 a {
   font-weight: 500;
   color: white;
